# github-octolytics.py

./: README.md  setup.cfg  setup.py
github_octolytics/: __init__.py
tests/github-octolytics/examples/: django.py
