# https://pypi.org/project/setupcfg-generator/
[metadata]
name = github-octolytics
version = 2019.4.13
url = https://github.com/andrewp-as-is/github-octolytics.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = chmod

[options]
install_requires = 
	Requests
	setuptools
packages = 
	github_octolytics
